--- a/SILENT HILL 3 Redux.cbp
+++ b/SILENT HILL 3 Redux.cbp
@@ -16,6 +16,7 @@
 					<Add option="-std=c++11" />
 					<Add option="-m32" />
 					<Add option="-g" />
+					<Add option="-masm=intel" />
 					<Add directory="include" />
 				</Compiler>
 				<Linker>
@@ -34,6 +35,7 @@
 					<Add option="-O2" />
 					<Add option="-std=c++11" />
 					<Add option="-m32" />
+					<Add option="-masm=intel" />
 					<Add directory="include" />
 				</Compiler>
 				<Linker>
@@ -52,6 +54,7 @@
 					<Add option="-std=c++11" />
 					<Add option="-m64" />
 					<Add option="-g" />
+					<Add option="-masm=intel" />
 					<Add directory="include" />
 				</Compiler>
 				<Linker>
@@ -70,6 +73,7 @@
 					<Add option="-O2" />
 					<Add option="-std=c++11" />
 					<Add option="-m64" />
+					<Add option="-masm=intel" />
 					<Add directory="include" />
 				</Compiler>
 				<Linker>
