--- a/.gitignore
+++ b/.gitignore
@@ -43,22 +43,7 @@
 .idea/tasks.xml
 .idea/
 cmake-build-debug/
-
-# Sensitive or high-churn files:
-.idea/dataSources/
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
-
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
+.gitignore.swp
 
 ## File-based project format:
 *.iws
@@ -79,4 +64,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
 
