--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 *.lai
 *.la
 *.dll
+*.a
 
 # Executables
 *.exe
@@ -32,6 +33,14 @@
 
 #Logging
 log.txt
+
+#Folders (so library headers don't get pushed for C::B users!)
+include/freetype
+include/FTGL
+include/GL
+include/glm
+include/SDL2
+include/ft2build.h
 
 
 ### All the settings in this below were came from GitHub official GitIgnore repo
