Created texture header file

--- a/SILENT HILL 3 Redux.cbp
+++ b/SILENT HILL 3 Redux.cbp
@@ -92,29 +92,20 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/SH3/arc/sh3_arc_file.hpp" />
 		<Unit filename="include/SH3/arc/sh3_arc_section.hpp" />
 		<Unit filename="include/SH3/arc/sh3_arc_types.hpp" />
 		<Unit filename="include/SH3/graphics/sh3_model.hpp" />
+		<Unit filename="include/SH3/graphics/sh3_texture.hpp" />
 		<Unit filename="include/SH3/sh3arch.hpp" />
 		<Unit filename="include/SH3/sh3math.hpp" />
 		<Unit filename="include/SH3/sh3util.hpp" />
 		<Unit filename="include/SH3/stdtype.hpp" />
 		<Unit filename="include/SH3/system/sh3_config.hpp" />
 		<Unit filename="include/SH3/system/sh3_glcontext.hpp" />
+		<Unit filename="include/SH3/system/sh3_sdl_destroyer.hpp" />
 		<Unit filename="include/SH3/system/sh3_window.hpp" />
 		<Unit filename="include/SH3/types/vertex.hpp" />
-		<Unit filename="resource32.rc">
-			<Option compilerVar="WINDRES" />
-			<Option compiler="gcc" use="1" buildCommand="$rescomp -F pe-i386 $res_includes -J rc -O coff -i $file -o $resource_output" />
-			<Option target="Debug i686" />
-			<Option target="Release i686" />
-		</Unit>
-		<Unit filename="resource64.rc">
-			<Option compilerVar="WINDRES" />
-			<Option compiler="gcc" use="1" buildCommand="$rescomp -F pe-x86-64 $res_includes -J rc -O coff -i $file -o $resource_output" />
-			<Option target="Debug x86_64" />
-			<Option target="Release x86_64" />
-		</Unit>
 		<Unit filename="source/arc/sh3_arc.cpp" />
 		<Unit filename="source/arc/sh3_arc_file.cpp" />
 		<Unit filename="source/arc/sh3_arc_section.cpp" />
