--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,29 @@ if(NOT CMAKE_BUILD_TYPE)
 	endif()
 	set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS ${CMAKE_CONFIGURATION_TYPES})
 endif()
+set(ASSERTION_BEHAVIOR_DEFAULT "Log and ask")
+if("${CMAKE_BUILD_TYPE}" STREQUAL "Release" OR "${CMAKE_BUILD_TYPE}" STREQUAL "MinSizeRel")
+	set(ASSERTION_BEHAVIOR_DEFAULT "Disable")
+endif()
+set(ASSERTION_BEHAVIOR "${ASSERTION_BEHAVIOR_DEFAULT}" CACHE STRING "What to do when an assertion fails.")
+set_property(CACHE ASSERTION_BEHAVIOR PROPERTY STRINGS "Disable" "Log and abort" "Log and continue" "Log and ask")
+
+if("${ASSERTION_BEHAVIOR}" STREQUAL "Disable")
+	add_definitions("-DASSERT_OFF")
+elseif("${ASSERTION_BEHAVIOR}" STREQUAL "Log and abort")
+	#default, no special defines required
+elseif("${ASSERTION_BEHAVIOR}" STREQUAL "Log and continue")
+	add_definitions("-DASSERT_CONTINUE")
+elseif("${ASSERTION_BEHAVIOR}" STREQUAL "Log and ask")
+	add_definitions("-DASSERT_ASK_MSGBOX" "-DASSERT_ASK_STDERR")
+endif()
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-	set(CXX_FLAGS "-Wall -Wextra -pedantic -masm=intel" CACHE INTERNAL "Additional compiler flags to use.")
+	set(CXX_FLAGS "-Wall -Wextra -pedantic" CACHE INTERNAL "Additional compiler flags to use.")
 	
 	option(CXX_FORCE_COLOR "Force compiler to use colored output (if available)." ON)
 	if(CXX_FORCE_COLOR)
