Add SH3/graphics/texture.cpp to CMakeLists.txt

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -16,6 +16,8 @@ add_executable("${CMAKE_PROJECT_NAME}"
 	"SH3/arc/section.cpp"
 	"SH3/arc/types.cpp"
 	
+	"SH3/graphics/texture.cpp"
+	
 	"SH3/system/assert.cpp"
 	"SH3/system/config.cpp"
 	"SH3/system/glcontext.cpp"
