Tweaked message class
Moved all #defines into enums to make attributes more type safe.
Moved attribute pairs into a struct to make reading them a bit cleaner.
Reworked the read loop to remove unnnecessary code.

--- a/SILENT HILL 3 Redux.cbp
+++ b/SILENT HILL 3 Redux.cbp
@@ -132,6 +132,7 @@
 		<Unit filename="source/SH3/system/config.cpp" />
 		<Unit filename="source/SH3/system/glcontext.cpp" />
 		<Unit filename="source/SH3/system/log.cpp" />
+		<Unit filename="source/SH3/system/msg/msg.cpp" />
 		<Unit filename="source/SH3/system/window.cpp" />
 		<Unit filename="source/main.cpp" />
 		<Extensions>
