Initial bmp loader
Created a small bitmap loader to deal with some of the bitmaps shipped
with sh3, as well as our default 'error' texture for textures that are
loaded/buond incorrectly. Currently just loads the texture, as there is
no shader to draw any of this, so Draw() is currently unimplemented.

--- a/SILENT HILL 3 Redux.cbp
+++ b/SILENT HILL 3 Redux.cbp
@@ -109,6 +109,7 @@
 		<Unit filename="include/SH3/arc/vfile.hpp" />
 		<Unit filename="include/SH3/error.hpp" />
 		<Unit filename="include/SH3/graphics/model.hpp" />
+		<Unit filename="include/SH3/graphics/msbmp.hpp" />
 		<Unit filename="include/SH3/graphics/texture.hpp" />
 		<Unit filename="include/SH3/system/config.hpp" />
 		<Unit filename="include/SH3/system/exit_code.hpp" />
@@ -132,6 +133,7 @@
 		<Unit filename="source/SH3/arc/section.cpp" />
 		<Unit filename="source/SH3/arc/types.cpp" />
 		<Unit filename="source/SH3/arc/vfile.cpp" />
+		<Unit filename="source/SH3/graphics/msbmp.cpp" />
 		<Unit filename="source/SH3/graphics/texture.cpp" />
 		<Unit filename="source/SH3/system/config.cpp" />
 		<Unit filename="source/SH3/system/glcontext.cpp" />
