--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable("${CMAKE_PROJECT_NAME}"
 	
 	"SH3/graphics/texture.cpp"
 	"SH3/graphics/msbmp.cpp"
+	"SH3/graphics/quad.cpp"
 	
 	"SH3/system/assert.cpp"
 	"SH3/system/config.cpp"
