Abstraction of OpenGL Data Types
All important OpenGL structures and data types have been abstracted to
make them more memory safe and remove the need for a whole lot of
repetitive 'glXYZ()' calls.

--- a/SILENT HILL 3 Redux.cbp
+++ b/SILENT HILL 3 Redux.cbp
@@ -110,11 +110,15 @@
 		<Unit filename="include/SH3/error.hpp" />
 		<Unit filename="include/SH3/graphics/model.hpp" />
 		<Unit filename="include/SH3/graphics/msbmp.hpp" />
+		<Unit filename="include/SH3/graphics/quad.hpp" />
 		<Unit filename="include/SH3/graphics/texture.hpp" />
+		<Unit filename="include/SH3/system/assert.hpp" />
 		<Unit filename="include/SH3/system/config.hpp" />
 		<Unit filename="include/SH3/system/exit_code.hpp" />
+		<Unit filename="include/SH3/system/glbuffer.hpp" />
 		<Unit filename="include/SH3/system/glcontext.hpp" />
 		<Unit filename="include/SH3/system/glprogram.hpp" />
+		<Unit filename="include/SH3/system/glvertarray.hpp" />
 		<Unit filename="include/SH3/system/log.hpp" />
 		<Unit filename="include/SH3/system/sdl_destroyer.hpp" />
 		<Unit filename="include/SH3/system/window.hpp" />
@@ -134,10 +138,14 @@
 		<Unit filename="source/SH3/arc/types.cpp" />
 		<Unit filename="source/SH3/arc/vfile.cpp" />
 		<Unit filename="source/SH3/graphics/msbmp.cpp" />
+		<Unit filename="source/SH3/graphics/quad.cpp" />
 		<Unit filename="source/SH3/graphics/texture.cpp" />
+		<Unit filename="source/SH3/system/assert.cpp" />
 		<Unit filename="source/SH3/system/config.cpp" />
+		<Unit filename="source/SH3/system/glbuffer.cpp" />
 		<Unit filename="source/SH3/system/glcontext.cpp" />
 		<Unit filename="source/SH3/system/glprogram.cpp" />
+		<Unit filename="source/SH3/system/glvertarray.cpp" />
 		<Unit filename="source/SH3/system/log.cpp" />
 		<Unit filename="source/SH3/system/window.cpp" />
 		<Unit filename="source/main.cpp" />
