--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -43,12 +43,16 @@ add_executable("${CMAKE_PROJECT_NAME}"
 	"SH3/system/config.cpp"
 	"SH3/system/glcontext.cpp"
 	"SH3/system/glprogram.cpp"
+	"SH3/system/glbuffer.cpp"
+	"SH3/system/glvertarray.cpp"
 	"SH3/system/input.cpp"
 	"SH3/system/log.cpp"
 	"SH3/system/window.cpp"
+
 	
 	"../${BINARY_RESOURCE_FILE}"
 )
+
 target_link_libraries("${CMAKE_PROJECT_NAME}"
 #	PRIVATE FREETYPE
 #	PRIVATE FTGL
