--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable("input"
 	"../source/SH3/system/log.cpp"
 	"../source/SH3/system/window.cpp"
 )
+
 target_link_libraries("input"
 #	PRIVATE "${FREETYPE_LIBRARIES}"
 #	PRIVATE "${FTGL_LIBRARIES}"
@@ -28,4 +29,17 @@ target_link_libraries("input"
 	PRIVATE "${OPENGL_gl_LIBRARY}"
 	PRIVATE "${SDL2_LIBRARIES}"
 	PRIVATE "${ZLIB_LIBRARIES}"
+)
+
+add_executable("vao"
+	"vao.cpp"
+	
+	"../source/SH3/system/assert.cpp"
+	"../source/SH3/system/config.cpp"
+	"../source/SH3/system/glcontext.cpp"
+	"../source/SH3/system/glprogram.cpp"
+	"../source/SH3/system/glbuffer.cpp"
+	"../source/SH3/system/glvertarray.cpp"
+	"../source/SH3/system/log.cpp"
+	"../source/SH3/system/window.cpp"
 )
