Fix test targets

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,4 @@
+find_package(Boost REQUIRED)
 #find_package(Freetype REQUIRED)
 #find_package(FTGL REQUIRED)
 find_package(GLEW REQUIRED)
@@ -6,8 +7,25 @@ find_package(OpenGL REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(ZLIB REQUIRED)
 
+#support for older CMake versions
+if(NOT TARGET GLEW::GLEW)
+	set(GLEW::GLEW GLEW)
+endif()
+if(NOT TARGET OpenGL::GL)
+	set(OpenGL::GL OpenGL)
+endif()
+if(NOT TARGET ZLIB::ZLIB)
+	set(ZLIB::ZLIB ZLIB)
+endif()
+
 include_directories("../include")
 include_directories(SYSTEM "../third_party/debugbreak")
+include_directories(SYSTEM "${Boost_INCLUDE_DIRS}")
+include_directories(SYSTEM "${GLEW_INCLUDE_DIRS}")
+include_directories(SYSTEM "${GLM_INCLUDE_DIRS}")
+include_directories(SYSTEM "${OPENGL_INCLUDE_DIR}")
+include_directories(SYSTEM "${SDL2_INCLUDE_DIRS}")
+include_directories(SYSTEM "${ZLIB_INCLUDE_DIRS}")
 
 add_executable("input"
 	"input.cpp"
@@ -22,13 +40,13 @@ add_executable("input"
 )
 
 target_link_libraries("input"
-#	PRIVATE "${FREETYPE_LIBRARIES}"
-#	PRIVATE "${FTGL_LIBRARIES}"
-	PRIVATE "${GLEW_LIBRARIES}"
-	PRIVATE "${GLM_LIBRARIES}"
-	PRIVATE "${OPENGL_gl_LIBRARY}"
-	PRIVATE "${SDL2_LIBRARIES}"
-	PRIVATE "${ZLIB_LIBRARIES}"
+#	PRIVATE FREETYPE
+#	PRIVATE FTGL
+	PRIVATE GLEW::GLEW
+	PRIVATE glm
+	PRIVATE OpenGL::GL
+	PRIVATE SDL2
+	PRIVATE ZLIB::ZLIB
 )
 
 add_executable("vao"
@@ -42,4 +60,14 @@ add_executable("vao"
 	"../source/SH3/system/glvertarray.cpp"
 	"../source/SH3/system/log.cpp"
 	"../source/SH3/system/window.cpp"
+)
+
+target_link_libraries("vao"
+#	PRIVATE FREETYPE
+#	PRIVATE FTGL
+	PRIVATE GLEW::GLEW
+	PRIVATE glm
+	PRIVATE OpenGL::GL
+	PRIVATE SDL2
+	PRIVATE ZLIB::ZLIB
 )
