Fixed up Code::Blocks Project
Fixed up the .gitignore and Code::Blocks project (it now targets c++14
instead of c++11) for anyone that wants to use it instead of CMake.

--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,10 @@
 log.txt
 
 #Folders (so library headers don't get pushed for C::B users!)
-include/freetype
-include/FTGL
 include/GL
 include/glm
 include/SDL2
-include/ft2build.h
+include/boost
 
 #SILENT HILL 3 stuff
 *.arc
