Added a fullscreen quad test to test texturing.
Added a very simple to test to see whether textures are being loaded
correctly. Draws the SILENT HILL 3 menu logo ("sys_title.tex") to a
fullscreen quad. This shader will be used for the puzzle sections of the
game.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -71,3 +71,33 @@ target_link_libraries("vao"
 	PRIVATE SDL2
 	PRIVATE ZLIB::ZLIB
 )
+
+add_executable("tex"
+	"tex.cpp"
+	
+	"../source/SH3/arc/file.cpp"
+	"../source/SH3/arc/section.cpp"
+	"../source/SH3/arc/types.cpp"
+	"../source/SH3/arc/vfile.cpp"
+	
+	"../source/SH3/graphics/texture.cpp"
+	
+	"../source/SH3/system/assert.cpp"
+	"../source/SH3/system/config.cpp"
+	"../source/SH3/system/glcontext.cpp"
+	"../source/SH3/system/glprogram.cpp"
+	"../source/SH3/system/glbuffer.cpp"
+	"../source/SH3/system/glvertarray.cpp"
+	"../source/SH3/system/log.cpp"
+	"../source/SH3/system/window.cpp"
+)
+
+target_link_libraries("tex"
+#	PRIVATE FREETYPE
+#	PRIVATE FTGL
+	PRIVATE GLEW::GLEW
+	PRIVATE glm
+	PRIVATE OpenGL::GL
+	PRIVATE SDL2
+	PRIVATE ZLIB::ZLIB
+)
