Rename sh3_arc to mft_reader and remove it from public API
This also shuffles the subarc file-loading functionality around, so
some code moves from (formerly) sh3_arc to sh3::arc::subarc.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,7 +57,7 @@ add_executable("tex"
 	"tex.cpp"
 	
 	"../source/SH3/arc/mft.cpp"
-	"../source/SH3/arc/types.cpp"
+	"../source/SH3/arc/subarc.cpp"
 	"../source/SH3/arc/vfile.cpp"
 	
 	"../source/SH3/graphics/texture.cpp"
