Initial implementation of the SILENT HILL camera. Currently can perform a transformation to vertex data to project a 3D image, as well as the position of camera (as well as its lookat() position) which is able to be set. There is currently no collision detection/camera bounds, as we haven't reversed that yet.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -78,3 +78,27 @@ target_link_libraries("tex"
 	PRIVATE "${SDL2_LIBRARIES}"
 	PRIVATE "${ZLIB_LIBRARIES}"
 )
+
+add_executable("cam"
+	"camera.cpp"
+	
+	"../source/SH3/angle.cpp"
+	"../source/SH3/camera/camera.cpp"
+	
+	"../source/SH3/system/assert.cpp"
+	"../source/SH3/system/config.cpp"
+	"../source/SH3/system/glcontext.cpp"
+	"../source/SH3/system/glprogram.cpp"
+	"../source/SH3/system/glbuffer.cpp"
+	"../source/SH3/system/glvertarray.cpp"
+	"../source/SH3/system/log.cpp"
+	"../source/SH3/system/window.cpp"
+)
+
+target_link_libraries("cam"
+	PRIVATE "${GLEW_LIBRARIES}"
+	PRIVATE "${OPENGL_LIBRARIES}"
+	PRIVATE "${SDL2_LIBRARIES}"
+	PRIVATE "${ZLIB_LIBRARIES}"
+)
+
