Switch from -Wswitch-default to -Wswitch-enum
We do not want a default-case when switching enums, because when we add
variants to an enum, we want to be warned if we don't handle the new
variant.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHE
 		"-Wundef"
 		"-Wfloat-equal"
 		"-Wunreachable-code"
-		"-Wswitch-default"
+		"-Wswitch-enum"
 		"-Weffc++"
 	)
 	string(REPLACE ";" " " CXX_FLAGS "${CXX_FLAGS}")
